--- a/css/about.css
+++ b/css/about.css
@@ -430,7 +430,7 @@ body {
   }
 
   .site-nav__link {
-    font-family: 'Barlow';
+    font-family: 'Barlow',sans-serif;
     font-weight: bold;
     font-size: 12px;
     line-height: 15px;
@@ -599,6 +599,21 @@ body {
     background-image: url("../img/bitmap-desktop.png");
   }
 
+  .hero-heading{
+    font-family: 'Fraunces 9pt',sans-serif;
+    font-size: 32px;
+    line-height: 40px;
+    color: #FEFCF7;
+  }
+
+  .hero-text{
+    font-family: 'Barlow',sans-serif;
+    font-size: 15px;
+    line-height: 25px;
+    color: #FEFCF7;
+    opacity: 0.8;
+  }
+
 
   .commitment--img {
     width: 445px;
@@ -609,8 +624,11 @@ body {
 
   .commitment--text{
     width: 540px;
-    font-size: 16px;
-    line-height: 26px;
+    font-family: 'Barlow',sans-serif;
+    font-size: 15px;
+    line-height: 25px;
+    color: #333D4B;
+    opacity: 0.8;
   }
 
   .uncompromising {
@@ -664,7 +682,7 @@ body {
   .footer-content__wrapper{
     display: flex;
     justify-content: space-between;
-    padding: 48px 85px;
+    padding: 0 85px;
   }
 
   .logo-wrapper{
