--- a/css/style.css
+++ b/css/style.css
@@ -512,6 +512,11 @@ body {
     letter-spacing: 0.9px;
     text-transform: uppercase;
     color: #83888F;
+    transition: color 0.5s ease;
+  }
+
+  .header-nav__link:hover{
+    color: #333D4B;
   }
 
 
