--- a/css/creat.css
+++ b/css/creat.css
@@ -1,3 +1,13 @@
+:root {
+  --dark-cyan: #0E8784;
+  --dark-grey-blue: #333D4B;
+  --pale-orange: #FDD6BA;
+  --light-grey-bg: #FEFCF7;
+  --grey: #83888F;
+  --main-font: "Barlow", "Arial", sans-serif;
+  --secondary-font: "Fraunces", "Times New Roman", serif;
+}
+
 @font-face {
   font-family: "Barlow";
   src: url("../fonts/Barlow-Bold.woff2") format("woff2"),
@@ -464,6 +474,13 @@ body {
   opacity: 0.6;
 }
 
+.btn{
+  display: block;
+}
+
+.order-madal__mobile{
+  display: none;
+}
 
 @media only screen and (min-width: 768px) {
 
@@ -683,6 +700,7 @@ body {
   .footer-item2 {
     padding: 0 32px;
   }
+
 }
 
 @media only screen and (min-width: 1100px) {
@@ -869,4 +887,154 @@ body {
     padding: 0;
   }
 
+}
+
+/* MODAL */
+
+.order-modal {
+  display: none;
+}
+
+.order-modal--active{
+  display: block;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+  overflow: auto;
+  width: 100%;
+  height: 100%;
+  padding: 35px 24px;
+  background-color: rgba(2, 2, 2, 0.507);
+}
+.order-modal__wrapper {
+  background-color: var(--light-grey-bg);
+}
+
+
+
+.order-modal-top {
+  padding: 24px;
+  background-color: var(--dark-grey-blue);
+}
+
+.order-modal__heading {
+  margin: 0;
+  color: var(--light-grey-bg);
+  font-family: var(--secondary-font);
+}
+
+.order-modal_box {
+  padding: 24px;
+  margin-bottom: 20px;
+  background-color: var(--light-grey-bg);
+}
+
+.order-modal__content{
+  margin: 0;
+  font-family: var(--secondary-font);
+  color: var(--grey);
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 40px;
+}
+.order-modal__content span{
+  color: var(--dark-cyan);
+}
+
+.order-modal__info{
+  font-family: 'Barlow',sans-serif;
+  font-size: 15px;
+  line-height: 25px;
+  color: #333D4B;
+  opacity: 0.8;
+}
+
+.order-modal{
+  overflow: hidden;
+}
+
+.order-modal--active {
+  padding: 0px;
+  padding-top: 20px;
+}
+
+.order-modal__wrapper{
+  border-radius: 8px;
+  overflow: hidden;
+  margin: auto;
+}
+.order-modal-top {
+  padding: 48px 56px;
+}
+
+.order-modal_box {
+  padding: 56px;
+  border-radius: 0 0 8px 8px;
+}
+.order-modal__wrapper{
+  width: 540px;
+}
+
+.btn {
+  display: inline-block;
+  padding: 15px 30px;
+  border-radius: 6px;
+  text-decoration: none;
+  font-family: var(--secondary-font);
+  transition: background-color 0.3s ease, opacity 0.3s ease;
+  white-space: nowrap;
+  border: none;
+}
+
+.btn--primary {
+  display: block;
+  background-color: var(--dark-cyan);
+  color: var(--light-grey-bg);
+}
+
+.btn--primary:hover {
+  background-color: #66D2CF;
+}
+
+.btn--primary:active {
+  opacity: 0.6;
+}
+
+@media only screen and (min-width: 768px){
+  .btn--primary{  
+    display: none;
+  }
+
+  .order-madal__mobile{
+    display: block;
+    display: flex;
+    align-items: center;
+    /* justify-content: space-between; */
+  }
+
+  .order-madal__mobile-text{
+    font-family: 'Fraunces 9pt',sans-serif;
+    font-size: 32px;
+    line-height: 36px;
+    color: #333D4B;
+  }
+
+  .order-checkout__button{
+    text-decoration: none;
+    border: 2px solid transparent;
+    border-radius: 6px;
+    font-family: 'Fraunces 9pt',sans-serif;
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
+    color: #FEFCF7;
+    background-color: #0E8784;
+    padding: 15px 64px;
+    margin-left: 9px;
+    transition: background-color 0.5s ease;
+  }
+
+  .order-checkout__button:hover{
+    background-color: #66D2CF;
+  }
 }
