--- a/css/style.css
+++ b/css/style.css
@@ -581,10 +581,28 @@ body {
     top: 100%;
   }
 
+  .services-heading{
+    font-family: 'Fraunces 9pt',sans-serif;
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 48px;
+    /* identical to box height, or 120% */
+
+    text-align: center;
+
+    color: #FEFCF7;
+  }
+
   .services-text {
     width: 540px;
     margin-left: auto;
     margin-right: auto;
+    font-family: 'Barlow',sans-serif;
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    color: #FEFCF7;
+    opacity: 0.8;
   }
 
   .services-card {
